# fork-llm

./: Cargo.toml
examples/: bedrock_tool_calling_example.rs
src/backends/: anthropic.rs  azure_openai.rs  google.rs  mod.rs  vertex_ai.rs
src/backends/aws/: mod.rs  models.rs
src/builder/: backend.rs
tests/: test.rs
