[package]
name = "llm"
version = "1.3.8"
edition = "2021"
description = "A Rust library unifying multiple LLM backends."
license = "MIT"
authors = [
    "Tristan Granier <graniet75@gmail.com>",
    "Jared Kofron <jared.kofron@gmail.com>",
]
repository = "https://github.com/graniet/llm"
documentation = "https://docs.rs/llm"
homepage = "https://github.com/graniet/llm"
default-run = "llm"

[features]
default = ["cli", "default-tls"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
full = [
    "openai",
    "anthropic",
    "ollama",
    "deepseek",
    "xai",
    "phind",
    "google",
    "groq",
    "azure_openai",
    "api",
    "elevenlabs",
    "agent",
    "cohere",
    "mistral",
    "openrouter",
    "huggingface",
    "bedrock",
    "vertex_ai",
]
openai = []
anthropic = []
ollama = []
deepseek = []
xai = []
phind = []
google = []
groq = []
azure_openai = []
cohere = []
mistral = []
openrouter = []
huggingface = []
bedrock = [
    "dep:awc",
    "dep:aws-config",
    "dep:aws-credential-types",
    "dep:aws-sdk-bedrockruntime",
    "dep:aws-smithy-types",
]
vertex_ai = []
cli = [
    "full",
    "dep:anyhow",
    "dep:clap",
    "dep:arboard",
    "dep:crossterm",
    "dep:flexi_logger",
    "dep:fuzzy-matcher",
    "dep:pulldown-cmark",
    "dep:ratatui",
    "dep:syntect",
    "dep:textwrap",
    "dep:tokio-util",
    "dep:unicode-segmentation",
    "dep:unicode-width",
    "dep:uuid",
    "dep:shell-words",
    "dep:portable-pty",
    "dep:pest",
    "dep:pest_derive",
]
api = ["dep:axum", "dep:tower-http", "dep:uuid"]
elevenlabs = []
agent = []
rodio = ["dep:rodio"]
logging = ["dep:env_logger"]
audio-example = [
    "agent",
    "openai",
    "dep:cpal",
    "dep:hound",
    "dep:ratatui",
    "dep:crossterm",
    "dep:anyhow",
    "dep:parking_lot",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = { version = "0.11.19" }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "multipart", "stream"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
secrecy = { version = "0.8", features = ["serde"] }
bytes = "1.9"
axum = { version = "0.7", optional = true, features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", optional = true, features = ["cors"] }
uuid = { version = "1.0", optional = true, features = ["v4", "serde"] }
base64 = "0.22.1"
futures = "0.3"
anyhow = { version = "1.0", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
arboard = { version = "3.4.1", optional = true }
crossterm = { version = "0.28", optional = true }
flexi_logger = { version = "0.29", optional = true }
fuzzy-matcher = { version = "0.3", optional = true }
pulldown-cmark = { version = "0.12", optional = true }
ratatui = { version = "0.28", optional = true }
syntect = { version = "5.2", optional = true, default-features = false, features = ["default-fancy"] }
textwrap = { version = "0.16", optional = true }
tokio-util = { version = "0.7", optional = true }
unicode-segmentation = { version = "1.11", optional = true }
unicode-width = { version = "0.1", optional = true }
serde_yaml = "0.9"
toml = "0.8"
dirs = "6.0.0"
either = { version = "1.15.0", features = ["serde"] }
rodio = { version = "0.20.0", features = ["mp3", "wav"], optional = true }
regex = "1.10"
log = "0.4"
env_logger = { version = "0.11", optional = true }
cpal = { version = "0.15", optional = true }
hound = { version = "3.5", optional = true }
parking_lot = { version = "0.12", optional = true }
chrono = {version = "0.4", default-features = false, features = ["serde"]}
rand = "0.8"
awc = { version = "3.7.0", features = ["rustls-0_23-native-roots"], optional = true }
aws-config = { version = "1.7.15", optional = true }
aws-sdk-bedrockruntime = { version = "1.129.0", optional = true }
aws-credential-types = { version = "1.2.14", optional = true }
aws-smithy-types = { version = "1.4.7", optional = true }
shell-words = { version = "1.1", optional = true }
portable-pty = { version = "0.8", optional = true }
pest = { version = "2.7", optional = true }
pest_derive = { version = "2.7", optional = true }

[[bin]]
name = "llm"
path = "src/bin/llm-cli.rs"
required-features = ["cli"]

[[example]]
name = "agent_audio_example"
path = "examples/agent_audio_example.rs"
required-features = ["audio-example"]

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rodio = { version = "0.20.1", default-features = false, features = ["symphonia-all"]}
rstest = "0.26"
http = "1.2"
http-body-util = "0.1"
hyper = "1.5"
tokio-test = "0.4"
mockito = "1.5"
insta = "1.39"
proptest = "1.4"
tempfile = "3.10"
